--- a/src/app.css
+++ b/src/app.css
@@ -9,16 +9,16 @@
   width: 75%;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230),
     url("./assets/bg.jpg") center;
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.top{
+.top {
   height: 50%;
   position: relative;
 }
 
-.timer{
+.timer {
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -33,19 +33,19 @@
   left: 80px;
 }
 
-.bottom{
+.bottom {
   height: 50%;
 }
 
-.trivia{
+.trivia {
   height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
-.question{
+.question {
   width: 80%;
   background: linear-gradient(#100241, black);
   border: 2px solid white;
@@ -53,6 +53,64 @@
   padding: 20px;
   border-radius: 10px;
   font-size: 20px;
+}
+
+.answers {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.answer {
+  width: 40%;
+  padding: 10px;
+  text-align: center;
+  background: linear-gradient(#0e0124, #22074d);
+  border: 1px solid white;
+  border-radius: 15px;
+  font-size: 20px;
+  font-weight: 300;
+  margin: 0 10px 20px 10px;
+  cursor: pointer;
+}
+
+.answer:hover, .answer.active{
+  background: mediumblue;
+}
+
+.answer.correct{
+  animation: correct 3s ease forwards;
+}
+
+@keyframes correct{
+  0%, 22%, 42%{
+    background: mediumblue;
+  }
+
+  20%, 40%, 60%{
+    background: linear-gradient(#0e0124, #22074d);
+  }
+  62%, 100%{
+    background: green;
+  }
+}
+
+.answer.wrong{
+  animation: wrong 3s ease forwards;
+}
+
+@keyframes wrong{
+  0%, 22%, 42%{
+    background: mediumblue;
+  }
+
+  20%, 40%, 60%{
+    background: linear-gradient(#0e0124, #22074d);
+  }
+  62%, 100%{
+    background: crimson;
+  }
 }
 
 .pyramid {
@@ -75,8 +133,8 @@
   border-radius: 5px;
 }
 
-.moneyListItem.active{
-    background-color: teal;
+.moneyListItem.active {
+  background-color: teal;
 }
 
 .moneyListItemNumber {
